--- a/src/App.css
+++ b/src/App.css
@@ -389,7 +389,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     position: absolute;
     width: 0;
     height: 100%;
-    background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+    /*background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);*/
     top: 0;
     left: 0;
     z-index: -1;
@@ -422,7 +422,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .proj-imgbx::before {
   content: "";
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  opacity: 0.85;
+  opacity: 0.6;
   position: absolute;
   width: 100%;
   height: 0;
